<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:scaleType="fitXY"
        android:src="@drawable/starbucks_coffee_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:contentDescription="@string/coffee_background" />

    <ImageView
        android:id="@+id/Navigate_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_navigate_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/navigate_back" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Cart"
        app:layout_constraintStart_toEndOf="@id/Navigate_Back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_cart"
        app:tint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cart_imageview" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@id/Cart"
        app:layout_constraintEnd_toEndOf="@id/Cart"
        android:background="@color/darker_green"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView"/>

    <!--    Middle -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Coffee_Background"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="43dp"
        android:background="@color/darker_green"
        app:layout_constraintBottom_toBottomOf="@id/Coffee_ImageView"
        app:layout_constraintEnd_toEndOf="@id/Coffee_ImageView"
        app:layout_constraintStart_toStartOf="@id/Coffee_ImageView"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView" />

    <!--    Des -->
    <ImageView
        android:id="@+id/Coffee_ImageView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/coffee_imageview" />

    <TextView
        android:id="@+id/Product_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/caramel_nfrappuccino"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Coffee_Background" />

    <TextView
        android:id="@+id/Product_Price_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/price"
        android:textColor="@color/darker_green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Coffee_Background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/best_sales"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Product_Price_TextView" />

    <!--    Size Options -->
    <TextView
        android:id="@+id/Size_Options_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/size_options"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Product_TextView" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Tall_Cup_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/very_light_green"
        android:src="@drawable/ic_coffee_cup"
        app:contentPadding="20dp"
        app:tint="@color/lighter_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Size_Options_TextView"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView" />

    <TextView
        android:id="@+id/Tall_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tall_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/Tall_Cup_ImageView"
        app:layout_constraintStart_toStartOf="@id/Tall_Cup_ImageView"
        app:layout_constraintEnd_toEndOf="@id/Tall_Cup_ImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tall"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/Tall_TextView"
        app:layout_constraintStart_toStartOf="@id/Tall_TextView"
        app:layout_constraintEnd_toEndOf="@id/Tall_TextView"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Grande_Cup_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/very_light_green"
        android:src="@drawable/ic_grande_coffee_cup"
        app:contentPadding="18dp"
        app:tint="@color/lighter_green"
        app:layout_constraintEnd_toStartOf="@+id/Venti_Cup_ImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Tall_Cup_ImageView"
        app:layout_constraintTop_toBottomOf="@+id/Size_Options_TextView"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView" />

    <TextView
        android:id="@+id/Grande_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grande_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/Grande_Cup_ImageView"
        app:layout_constraintStart_toStartOf="@id/Grande_Cup_ImageView"
        app:layout_constraintEnd_toEndOf="@id/Grande_Cup_ImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grande_size"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/Grande_TextView"
        app:layout_constraintStart_toStartOf="@id/Grande_TextView"
        app:layout_constraintEnd_toEndOf="@id/Grande_TextView"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Venti_Cup_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/lighter_green"
        android:src="@drawable/ic_venti_coffee_cup"
        app:contentPadding="16dp"
        app:tint="@color/white"
        android:elevation="6dp"
        app:layout_constraintEnd_toStartOf="@+id/Custom_Cup_ImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Grande_Cup_ImageView"
        app:layout_constraintTop_toBottomOf="@+id/Size_Options_TextView"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView" />

    <TextView
        android:id="@+id/Venti_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venti"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/Venti_Cup_ImageView"
        app:layout_constraintStart_toStartOf="@id/Venti_Cup_ImageView"
        app:layout_constraintEnd_toEndOf="@id/Venti_Cup_ImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venti_size"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/Venti_TextView"
        app:layout_constraintStart_toStartOf="@id/Venti_TextView"
        app:layout_constraintEnd_toEndOf="@id/Venti_TextView"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Custom_Cup_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/very_light_green"
        android:src="@drawable/ic_venti_coffee_cup"
        app:contentPadding="16dp"
        app:tint="@color/lighter_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Size_Options_TextView"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView" />

    <TextView
        android:id="@+id/Custom_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/Custom_Cup_ImageView"
        app:layout_constraintStart_toStartOf="@id/Custom_Cup_ImageView"
        app:layout_constraintEnd_toEndOf="@id/Custom_Cup_ImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_size"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/Custom_TextView"
        app:layout_constraintStart_toStartOf="@id/Custom_TextView"
        app:layout_constraintEnd_toEndOf="@id/Custom_TextView"/>


    <!-- Count -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Remove_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:background="@color/lighter_green"
        android:src="@drawable/ic_remove"
        app:contentPadding="4dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/Quantity_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="38dp"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Remove_ImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Add_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:background="@color/lighter_green"
        android:src="@drawable/ic_add"
        app:contentPadding="4dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Quantity_TextView"
        app:shapeAppearanceOverlay="@style/Rounded_ImageView"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_to_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>